--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -9,5 +9,5 @@ RUN apt install -y curl net-tools procps
 
 COPY gateway.py /
 
-EXPOSE 8000
-CMD ["uvicorn", "gateway:app", "--host", "0.0.0.0", "--port", "8000"]
+# EXPOSE 8000
+# CMD ["uvicorn", "gateway:app", "--host", "0.0.0.0", "--port", "8000"]
