chore: renamed frontend to backend service
Signed-off-by: anshikaraman <anshikaaramann@gmail.com>

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,9 +2,9 @@ FROM python:3.8-slim-buster
 
 RUN pip install flask
 
-COPY service.py /
+COPY backend.py /
 
-ENV FLASK_APP=service
+ENV FLASK_APP=backend.py
 
 # EXPOSE 7000
 CMD ["flask", "run", "--host=0.0.0.0", "--port=7000"]
