feat: least response time policy working on single phys machine
Signed-off-by: anshikaraman <anshikaaramann@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,10 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - frontend
-  frontend:
-    image: test-frontend
-    build: frontend
+      - backend
+  backend:
+    image: test-backend
+    build: backend
     restart: unless-stopped
     ports:
       - "9000-9009:7000"
