--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -6,8 +6,9 @@ RUN pip install fastapi uvicorn
 RUN pip install requests==2.26.*
 RUN apt install -y inetutils-ping
 RUN apt install -y curl net-tools procps
+RUN apt install gunicorn -y
 
 COPY gateway.py /
 
-# EXPOSE 8000
-# CMD ["uvicorn", "gateway:app", "--host", "0.0.0.0", "--port", "8000"]
+EXPOSE 8000
+CMD ["uvicorn", "gateway:app", "--host", "0.0.0.0", "--port", "8000"]
